Sonar. Cleanup. Refactor.